<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Script Manager</string>

    <string name="app_name_summary">An app to create, import, edit, share and easily execute shell scripts</string>
    <string name="apply">Apply</string>
    <string name="apply_on_boot">On-boot</string>
    <string name="apply_question">Apply %s?</string>
    <string name="applying_script">Applying %s!</string>
    <string name="billing_client_disconnected">Failed to connect with Google Play Billing client!</string>
    <string name="cancel">Cancel</string>
    <string name="change_log">Change-logs</string>
    <string name="create">Create</string>
    <string name="credits">Credits</string>
    <string name="credits_summary" translatable="false"><b><i>Grarak</i></b>: KernelAdiutor (code base)\n<b><i>topjohnwu</i></b>: libsu &amp; Magisk (on-boot service)\n<b><i>Lennoard Silva</i></b>: Code contributions/pt-Br Translations\n<b><i>SmgKhOaRn</i></b>: Korean translations\n<b><i>Oktapra Amtono</i></b>: Indonesian translations\n<b><i>Mikesew1320</i></b>: Amharic/Russian translations\n<b><i>tsiflimagas</i></b>: Greek translations\n<b><i>Toxinpiper</i></b>: App Icon</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_auto">Auto</string>
    <string name="dark_theme_disable">Disable</string>
    <string name="dark_theme_enable">Enable</string>
    <string name="delete">Delete</string>
    <string name="developed_by">Developed By</string>
    <string name="dismiss">Dismiss</string>
    <string name="edit">Edit</string>
    <string name="import_item">Import</string>
    <string name="language">Language</string>
    <string name="language_am" translatable="false">አማርኛ</string>
    <string name="language_default">Default</string>
    <string name="language_el" translatable="false">Ελληνικά</string>
    <string name="language_en" translatable="false">English</string>
    <string name="language_in" translatable="false">bahasa Indonesia</string>
    <string name="language_ko" translatable="false">한국어</string>
    <string name="language_pt" translatable="false">Português</string>
    <string name="language_ru" translatable="false">русский</string>
    <string name="late_start">Late Start Mode</string>
    <string name="late_start_message">%s will be executed in late_start service!</string>
    <string name="licence">Licence</string>
    <string name="more_apps">More from Developer</string>
    <string name="more_apps_summary">Checkout more applications provided by the developer in Google Play</string>
    <string name="name_empty">Script name shouldn\'t be empty! Aborting.</string>
    <string name="no_internet">Please check your internet connection!</string>
    <string name="ok">OK</string>
    <string name="on_boot_message">%s is excluded from the on boot service!</string>
    <string name="path_sdcard">SDCard</string>
    <string name="permission_denied_write_storage">Permission denied for writing to storage!</string>
    <string name="post_fs">Post FS Mode</string>
    <string name="post_fs_message">%s will be executed in post-fs-data!</string>
    <string name="press_back">Press back again to exit</string>
    <string name="rate_us">Rate App</string>
    <string name="rate_us_Summary">Rate or/and Review Script Manager in Google Play</string>
    <string name="report_issue">Report an Issue</string>
    <string name="report_issue_summary">Raise an issue at GitHub</string>
    <string name="root_unavailable">Unfortunately, Root Access is either unavailable or declined for this app! Some features of this app is, therefore, won\'t work on your device.</string>
    <string name="script_applied_success">%s executed successfully!</string>
    <string name="script_exists">A script named %s is already exists! Aborting.</string>
    <string name="script_execute_busy">%s is currently executing! Please wait.</string>
    <string name="select_question">Select %s?</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_app">Share App</string>
    <string name="share_app_Summary">Invite your friends to use Script Manager</string>
    <string name="shared_by">%s/shared by Script Manager</string>
    <string name="share_message">To apply this script, simply download the file and import into Script Manager</string>
    <string name="share_message_app">Script Manager %s can be obtained from PlayStore: https://play.google.com/store/apps/details?id=com.smartpack.scriptmanager</string>
    <string name="share_with">Share with</string>
    <string name="source_code">Source Code</string>
    <string name="source_code_summary">Script Manager is an open-source application which is ready to accept contributions from the development community. Click here to check out the source code!</string>
    <string name="support_acknowledged">Donation Acknowledged \u2665</string>
    <string name="support_app">Buy Donation App</string>
    <string name="support_development">Support Development</string>
    <string name="support_development_summary">If you like to appreciate the efforts of the developer to provide this tool entirely free, please consider sending a small donation by clicking one among the below-provided options! Buying any of this product will award you a supporter badge here!</string>
    <string name="support_dinner">Buy me a Dinner</string>
    <string name="support_group">Support Group</string>
    <string name="support_group_summary">Join Telegram support group</string>
    <string name="support_meal">Buy me a Meal</string>
    <string name="support_coffee">Buy me a Coffee</string>
    <string name="support_already_received_message">You\'re already supported the development with this item before!</string>
    <string name="support_received_message">Thank you very much for your support \u2665\nIt will motivate me a lot to continue my projects more active! Moreover, you\'ll receive a supporter badge on the top of this page.</string>
    <string name="support_retry_message">Please try purchasing again!</string>
    <string name="support_status_message">Thank you very much for your support!</string>
    <string name="sure_question">Delete %s?</string>
    <string name="test">Test</string>
    <string name="testing">"Testing script… Please be patient!"</string>
    <string name="testing_success">"Testing script completed successfully!"</string>
    <string name="translations">Translations</string>
    <string name="translations_summary">Help me to translate this app! Click here to get the original language strings in english</string>
    <string name="file_picker">File Picker</string>
    <string name="file_picker_external">External</string>
    <string name="file_picker_failed_message">Permission denied to read this folder!</string>
    <string name="file_picker_inbuilt">In-built</string>
    <string name="use_file_picker_message">Got some issues? Please disable \'Use In-built File Picker\' in \'Settings\' Menu!</string>
    <string name="wrong_extension">Please select a file with %s extension.</string>
    <string name="wrong_script">%s is not a proper script file! Aborting.</string>
    <string name="yes">Yes</string>
</resources>