<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="10dp"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="end|center_vertical">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/back_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_back"
                    android:background="@color/black"
                    android:tint="?android:attr/colorAccent"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:gravity="center_vertical"
                    android:textColor="?android:attr/colorAccent"
                    android:text="@string/support_development"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:padding="10dp" />
            </FrameLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/support_development_summary"
                android:linksClickable="true"
                android:gravity="center"
                android:padding="15dp" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp" >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:textStyle="bold"
        android:background="@color/black"
        android:text="@string/cancel"
        android:textColor="?android:attr/colorAccent"
        android:textSize="18sp" />
</RelativeLayout>