<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50sp"
        android:orientation="vertical"
        android:layout_gravity="start" >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_gravity="center" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="?attr/colorAccent"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name_summary"
            android:textIsSelectable="true"
            android:textSize="15sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical" >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:text="@string/developed_by"
                    android:textColor="?attr/colorAccent"
                    android:textIsSelectable="true"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/developer"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_developer"
                    android:layout_gravity="center" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="15dp" >

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:text="@string/change_log"
                        android:textColor="?attr/colorAccent"
                        android:textIsSelectable="true"
                        android:textSize="18sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/changelog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:padding="16dp"
                        android:gravity="start"
                        android:textIsSelectable="true"
                        android:textSize="15sp" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_gravity="bottom"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:background="@color/black"
        android:textColor="?attr/colorAccent"
        android:textSize="18sp"
        android:padding="10dp" />
</com.google.android.material.card.MaterialCardView>